[tool.poetry]
name = "challenger-estatistica-devs"
version = "0.1.0"
description = ""
authors = ["Weslleyolli <weslleyrichardson.cg@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
